<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileManager">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:paddingBottom="20dp"

        android:text="@string/profile"
        android:textStyle="bold"
        android:textColor="#3e3e3e"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="10dp">


            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/username"
                android:textSize="20sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/player"
                    android:id="@+id/UsernameField"/>

        </LinearLayout>

    <ImageView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#3F000000"
        android:layout_weight="45"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTakePicture"/>

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onLeave"/>

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onSave"/>

    </LinearLayout>

    </LinearLayout>
